[gd_scene load_steps=11 format=3 uid="uid://c62eqht5fdly0"]

[ext_resource type="Script" path="res://Skeleton.gd" id="1_vhdta"]
[ext_resource type="SpriteFrames" uid="uid://dyih3bhxmx1ix" path="res://SpriteFrames/Skeleton.tres" id="2_aft6w"]
[ext_resource type="Script" path="res://States/StateMachine.gd" id="3_svxj4"]
[ext_resource type="Script" path="res://States/Skeleton/SkeletonIdle.gd" id="4_4sov2"]
[ext_resource type="Script" path="res://States/Skeleton/SkeletonRun.gd" id="5_ful8f"]
[ext_resource type="Script" path="res://States/Skeleton/SkeletonDeath.gd" id="6_fi0gb"]

[sub_resource type="Animation" id="Animation_rkope"]
resource_name = "HandsIdle"
length = 0.5
loop_mode = 1
step = 0.05

[sub_resource type="AnimationLibrary" id="AnimationLibrary_drtpn"]
_data = {
"HandsIdle": SubResource("Animation_rkope")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_07g27"]
radius = 13.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wesm4"]
radius = 151.003

[node name="Skeleton" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_vhdta")
skeleton_type = "Base"

[node name="BodySprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_aft6w")
animation = &"Idle"
autoplay = "Idle"
offset = Vector2(0, -1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../BodySprite")
autoplay = "HandsIdle"
libraries = {
"": SubResource("AnimationLibrary_drtpn")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_07g27")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="NavPathUpdate" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="BaseDetectionArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaseDetectionArea"]
shape = SubResource("CircleShape2D_wesm4")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_svxj4")
initial_state = NodePath("SkeletonIdle")

[node name="SkeletonIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("skeleton")]
script = ExtResource("4_4sov2")
skeleton = NodePath("../..")

[node name="SkeletonRun" type="Node" parent="StateMachine" node_paths=PackedStringArray("skeleton")]
script = ExtResource("5_ful8f")
skeleton = NodePath("../..")

[node name="SkeletonDeath" type="Node" parent="StateMachine" node_paths=PackedStringArray("skeleton")]
script = ExtResource("6_fi0gb")
skeleton = NodePath("../..")

[connection signal="timeout" from="NavPathUpdate" to="." method="_on_nav_path_update_timeout"]
[connection signal="body_entered" from="BaseDetectionArea" to="." method="_on_base_detection_area_body_entered"]
[connection signal="body_exited" from="BaseDetectionArea" to="." method="_on_base_detection_area_body_exited"]
